# open-heidi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: main.cpp  server.cpp  server.h  token.cpp
core/requests/: device.cpp  device.h  openid_configuration.cpp  openid_configuration.h  requests.h  token.cpp  token.h
